--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-quick-start",
+  "name": "reebok-stepmania",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "Reebok stepmania game controlled by arduino",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
@@ -14,7 +14,7 @@
     "tutorial",
     "demo"
   ],
-  "author": "GitHub",
+  "author": "Diversivo",
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^7.1.8"
