--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "license": "CC0-1.0",
   "devDependencies": {
     "electron": "^7.1.8"
+  },
+  "dependencies": {
+    "electron-reload": "^1.5.0"
   }
 }
